tests/fixtures/invalid/list_mul_bytes.py
# Cannot multiply list by Bytes
x: list[int] = [1, 2] * b"hello"
